--- a/src/pages/promo-code/promo-code.scss
+++ b/src/pages/promo-code/promo-code.scss
@@ -1,67 +1,13 @@
 .PromoCodePage--container {
-  padding: 20px;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
+  display: flex;
 
-  .PromoCodePage--container-header {
-    .title {
-      font-size: 22px;
-    }
-    .subtitle {
-      color: darkgray;
-      font-size: 18px;
-    }
+  .PromoCodePage--card-ship-items {
+    flex: 1;
   }
 
-  .PromoCodePage--container-content {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-
-    .side-left {
-      img {
-        width: 200px;
-        height: 200px;
-      }
-    }
-    .side-right {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-
-      .text {
-        font-size: 18px;
-        color: darkgray;
-      }
-      .tags {
-        display: flex;
-        .tag {
-          background-color: wheat;
-          padding: 3px;
-          border-radius: 3px;
-        }
-      }
-      .price-and-actions {
-        display: flex;
-        justify-content: space-between;
-        .price {
-          color: red;
-        }
-        .actions {
-          display: flex;
-          gap: 10px;
-          .action-icon {
-            border: 1px solid blue;
-          }
-          .action-counter-button {
-            border: 1px solid green;
-          }
-          .action-counter {
-            border: 1px solid cyan;
-          }
-        }
-      }
-    }
+  .PromoCodePage--order-summary {
+    flex: 1;
+    max-width: 350px;
+    border: 1px solid red;
   }
 }
