feat(cart-page-templating): responsive wraping for main container

--- a/src/pages/promo-code/promo-code.scss
+++ b/src/pages/promo-code/promo-code.scss
@@ -1,5 +1,6 @@
 .PromoCodePage--container {
   display: flex;
+  flex-wrap: wrap;
 
   .PromoCodePage--card-ship-items {
     flex: 1;
@@ -7,7 +8,10 @@
 
   .PromoCodePage--order-summary {
     flex: 1;
-    max-width: 350px;
     border: 1px solid red;
+
+    @media (min-width:700px) {
+      max-width: 350px;
+    }
   }
 }
