feat(cart-page-templating): dynamic value changes

--- a/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
+++ b/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
@@ -28,4 +28,13 @@
     }
   }
 
+  .sum-total {
+    display: flex;
+    justify-content: space-between;
+    font-size: 22px;
+    .price {
+      font-weight: bold;
+    }
+  }
+
 }
