feat(cart-page-templating): add loading promo code input and plug discount when promo code is valid

--- a/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
+++ b/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
@@ -28,6 +28,15 @@
     }
   }
 
+  .promo-code-input-container {
+    margin: 15px 0;
+
+    .validation-result {
+      // position: absolute;
+      font-size: 22px;
+    }
+  }
+
   .sum-total {
     display: flex;
     justify-content: space-between;
