--- a/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
+++ b/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
@@ -6,12 +6,26 @@
   border-top: 1px solid;
   border-bottom: 1px solid;
 
+  // TODO mixin
+  line-height: 1.5;
+  letter-spacing: 0;
+  font-weight: 400;
+  font-family: Arial;
+  box-sizing: inherit;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.87);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+  // overflow: hidden;
+  // background-color: #e9e9e9; // #0a1430;
+
   .CardShipItemPage--container-header {
     .title {
       font-size: 22px;
     }
     .subtitle {
-      color: darkgray;
+      color: rgb(33, 33, 33);
       font-size: 18px;
     }
   }
@@ -25,6 +39,11 @@
       img {
         width: 200px;
         height: 200px;
+
+        @media (max-width:700px) {
+          width: 100px;
+          height: 100px;
+        }
       }
     }
     .side-right {
@@ -35,7 +54,11 @@
 
       .text {
         font-size: 18px;
-        color: darkgray;
+        color: rgb(33, 33, 33);
+
+        @media (max-width:700px) {
+          font-size: 4vw;
+        }
       }
       .tags {
         display: flex;
