--- a/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
+++ b/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
@@ -13,20 +13,19 @@
   font-family: Arial;
   box-sizing: inherit;
   background-color: #fff;
-  color: rgba(0, 0, 0, 0.87);
+  color: rgb(255 255 255 / 87%);
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   border-radius: 4px;
   box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
-  // overflow: hidden;
-  // background-color: #e9e9e9; // #0a1430;
 
   .CardShipItemPage--container-header {
     .title {
       font-size: 22px;
+      color: rgba(0, 0, 0, 0.87);
     }
     .subtitle {
       color: rgb(33, 33, 33);
-      font-size: 18px;
+      font-size: 16px;
     }
   }
 
@@ -53,7 +52,7 @@
       gap: 10px;
 
       .text {
-        font-size: 18px;
+        font-size: 16px;
         color: rgb(33, 33, 33);
 
         @media (max-width:700px) {
@@ -71,20 +70,22 @@
       .price-and-actions {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         .price {
-          color: red;
+          color: black;
+          font-size: 22px;
+          font-weight: bold;
         }
         .actions {
           display: flex;
           gap: 10px;
-          .action-icon {
-            border: 1px solid blue;
-          }
-          .action-counter-button {
-            border: 1px solid green;
-          }
+          justify-content: center;
+          align-items: center;
+          .action-icon {}
+          .action-counter-button {}
           .action-counter {
-            border: 1px solid cyan;
+            color: rgba(0, 0, 0, 0.87);
+            background-color: white;
           }
         }
       }
