feat(template-improvments): add mui trash icon

--- a/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
+++ b/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
@@ -81,10 +81,14 @@
           gap: 10px;
           justify-content: center;
           align-items: center;
-          .action-icon {}
+          color: rgba(0, 0, 0, 0.87);
+          .action-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
           .action-counter-button {}
           .action-counter {
-            color: rgba(0, 0, 0, 0.87);
             background-color: white;
           }
         }
