--- a/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
+++ b/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
@@ -6,13 +6,26 @@
   border-top: 1px solid;
   border-bottom: 1px solid;
 
+  // TODO mixin
+  line-height: 1.5;
+  letter-spacing: 0;
+  font-weight: 400;
+  font-family: Arial;
+  box-sizing: inherit;
+  background-color: #fff;
+  color: rgb(255 255 255 / 87%);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+
   .CardShipItemPage--container-header {
     .title {
       font-size: 22px;
+      color: rgba(0, 0, 0, 0.87);
     }
     .subtitle {
-      color: darkgray;
-      font-size: 18px;
+      color: rgb(33, 33, 33);
+      font-size: 16px;
     }
   }
 
@@ -25,6 +38,11 @@
       img {
         width: 200px;
         height: 200px;
+
+        @media (max-width:700px) {
+          width: 100px;
+          height: 100px;
+        }
       }
     }
     .side-right {
@@ -34,8 +52,12 @@
       gap: 10px;
 
       .text {
-        font-size: 18px;
-        color: darkgray;
+        font-size: 16px;
+        color: rgb(33, 33, 33);
+
+        @media (max-width:700px) {
+          font-size: 4vw;
+        }
       }
       .tags {
         display: flex;
@@ -48,20 +70,26 @@
       .price-and-actions {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         .price {
-          color: red;
+          color: black;
+          font-size: 22px;
+          font-weight: bold;
         }
         .actions {
           display: flex;
           gap: 10px;
+          justify-content: center;
+          align-items: center;
+          color: rgba(0, 0, 0, 0.87);
           .action-icon {
-            border: 1px solid blue;
+            display: flex;
+            justify-content: center;
+            align-items: center;
           }
-          .action-counter-button {
-            border: 1px solid green;
-          }
+          .action-counter-button {}
           .action-counter {
-            border: 1px solid cyan;
+            background-color: white;
           }
         }
       }
