--- a/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
+++ b/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
@@ -1,24 +1,25 @@
+@import './src/app/globals';
+
 .CardOrderSummmaryPage--container {
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  // background-color: #e9e9e9; // #fafafa; // #0a1430;
+  padding: $spacing-m;
   height: 100%;
 
   .ship-items-container {
     .ship-items {
       .title {
-        font-size: 22px;
+        font-size: $font-l;
       }
       .ship-item {
         display: flex;
         justify-content: space-between;
-        font-size: 16px;
-        color: rgb(33, 33, 33);
+        font-size: $font-m;
+        color: $color-black;
 
         .quantity-and-label {
           display: flex;
-          gap: 20px;
+          gap: $spacing-m;
           .quantity {
 
           }
@@ -34,15 +35,14 @@
     margin: 15px 0;
 
     .validation-result {
-      // position: absolute;
-      font-size: 22px;
+      font-size: $font-l;
     }
   }
 
   .sum-total {
     display: flex;
     justify-content: space-between;
-    font-size: 22px;
+    font-size: $font-l;
     .price {
       font-weight: bold;
     }
