--- a/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
+++ b/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
@@ -1,38 +1,27 @@
+@import './src/app/globals';
+
 .CardShipItemPage--container {
+  @include card;
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  gap: 10px;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-
-  // TODO mixin
-  line-height: 1.5;
-  letter-spacing: 0;
-  font-weight: 400;
-  font-family: Arial;
-  box-sizing: inherit;
-  background-color: #fff;
-  color: rgb(255 255 255 / 87%);
-  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  border-radius: 4px;
-  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+  padding: $spacing-m;
+  gap: $spacing-s;
 
   .CardShipItemPage--container-header {
     .title {
-      font-size: 22px;
-      color: rgba(0, 0, 0, 0.87);
+      font-size: $font-l;
+      color: $color-black;
     }
     .subtitle {
-      color: rgb(33, 33, 33);
-      font-size: 16px;
+      color: $color-black;
+      font-size: $font-m;
     }
   }
 
   .CardShipItemPage--container-content {
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: $spacing-m;
 
     .side-left {
       img {
@@ -49,22 +38,22 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: $spacing-s;
 
       .text {
-        font-size: 16px;
-        color: rgb(33, 33, 33);
+        font-size: $font-m;
+        color: $color-black;
 
         @media (max-width:700px) {
-          font-size: 4vw;
+          font-size: $font-s;
         }
       }
       .tags {
         display: flex;
         .tag {
-          background-color: wheat;
-          padding: 3px;
-          border-radius: 3px;
+          background-color: $color-white;
+          padding: $spacing-xs;
+          border-radius: $spacing-xs;
         }
       }
       .price-and-actions {
@@ -72,16 +61,16 @@
         justify-content: space-between;
         align-items: center;
         .price {
-          color: black;
-          font-size: 22px;
+          color: $color-black;
+          font-size: $font-l;
           font-weight: bold;
         }
         .actions {
           display: flex;
-          gap: 10px;
+          gap: $spacing-s;
           justify-content: center;
           align-items: center;
-          color: rgba(0, 0, 0, 0.87);
+          color: $color-black;
           .action-icon {
             display: flex;
             justify-content: center;
@@ -89,7 +78,7 @@
           }
           .action-counter-button {}
           .action-counter {
-            background-color: white;
+            background-color: $color-white;
           }
         }
       }
