--- a/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
+++ b/src/pages/promo-code/components/card-ship-item/card-ship-item.scss
@@ -72,6 +72,7 @@
           align-items: center;
           color: $color-black;
           .action-icon {
+            cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
