feat(ui-improvement): reset + dynamic fetch origin + buttons

--- a/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
+++ b/src/pages/promo-code/components/card-order-summary/card-order-summary.scss
@@ -39,6 +39,12 @@
     }
   }
 
+  .sum-raw {
+    display: flex;
+    justify-content: space-between;
+    font-size: $font-m;
+  }
+
   .sum-total {
     display: flex;
     justify-content: space-between;
